# Fastapi

backend/: pyproject.toml
backend/src/: main.py  sql_app.db
backend/src/app/: database.py
backend/src/app/apis/: auth.py  post.py  user.py
backend/src/app/dependencies/: auth.py
backend/src/app/models/: post.py  user.py
backend/src/app/services/: auth_service.py  post_service.py  token_service.py  user_service.py
backend/src/app/utils/: auth.py  security.py
backend/src/schemas/: auth.py  post.py  user.py
backend/src/templates/: login.html  posts_create.html  posts_view.html
